[tool.poetry]
name = "streamlit-attention-app"
version = "0.1.0"
description = ""
authors = ["Diego Quintana <daquintanav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
streamlit = "^1.28.1"
numpy = "^1.26.1"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
